CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
PROJECT(posixtimerstest C)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_C_COMPILER "/usr/bin/cc")
SET(CMAKE_BUILD_TYPE "")
SET(CMAKE_C_FLAGS "")
SET(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_RELWITHDEBUGINFO "")
SET(CMAKE_C_FLAGS_MINSIZE "")
ADD_EXECUTABLE(posixtimerstest posixtimerstest.c)
TARGET_LINK_LIBRARIES(posixtimerstest /usr/lib64/librt.so)
